# SFML-Project-Template

./: CMakeLists.txt
